--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@blocknote/core": "^0.45.0",
+    "@blocknote/mantine": "^0.45.0",
+    "@blocknote/react": "^0.45.0",
+    "@mantine/core": "^8.3.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
+    "mermaid": "^11.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^6.28.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.13.3",
     "remark-gfm": "^4.0.1"
   },
