--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-markdown": "^9.1.0",
     "react-router-dom": "^6.28.0",
     "react-syntax-highlighter": "^16.1.0",
+    "reagraph": "^4.30.7",
     "recharts": "^2.13.3",
     "remark-gfm": "^4.0.1"
   },
@@ -41,6 +42,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "jsdom": "^27.4.0",
+    "mock-socket": "^9.3.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
