--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "glob": "^10.0.0",
     "gray-matter": "^4.0.3",
     "multer": "^2.0.2",
+    "reagraph": "^4.20.0",
     "sharp": "^0.34.5",
     "sql.js": "^1.10.0",
     "uuid": "^9.0.0",
