--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@blocknote/mantine": "^0.45.0",
     "@blocknote/react": "^0.45.0",
     "@mantine/core": "^8.3.10",
+    "@react-three/drei": "^9.122.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
