Add Neo4j infrastructure and migration scripts
New files:
- docker-compose.neo4j.yml: Neo4j container config
- config/neo4j.ts: Connection driver and utilities
- scripts/neo4j-setup-schema.ts: Apply constraints/indexes
- scripts/migrate-to-neo4j.ts: Migrate blocks/links from SQLite

New npm scripts:
- neo4j:start/stop: Docker container management
- neo4j:schema: Apply database schema
- neo4j:migrate: Run migration (with --dry-run option)
- migrate:types: Run ARCH-001 type migration

Usage:
  npm run neo4j:start
  npm run neo4j:schema
  npm run migrate:types
  npm run neo4j:migrate

--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "migrate": "tsx database/migrate.ts",
     "migrate:status": "tsx database/migrate.ts --status",
     "migrate:titles": "tsx scripts/migrate-titles.ts",
+    "migrate:types": "tsx scripts/migrate-block-types.ts",
+    "migrate:types:dry-run": "tsx scripts/migrate-block-types.ts --dry-run --verbose",
+    "neo4j:start": "docker-compose -f docker-compose.neo4j.yml up -d",
+    "neo4j:stop": "docker-compose -f docker-compose.neo4j.yml down",
+    "neo4j:schema": "tsx scripts/neo4j-setup-schema.ts",
+    "neo4j:migrate": "tsx scripts/migrate-to-neo4j.ts",
+    "neo4j:migrate:dry-run": "tsx scripts/migrate-to-neo4j.ts --dry-run --verbose",
     "schema:generate": "drizzle-kit generate",
     "schema:migrate": "drizzle-kit migrate",
     "schema:push": "drizzle-kit push",
@@ -57,6 +64,7 @@
     "glob": "^10.0.0",
     "gray-matter": "^4.0.3",
     "multer": "^2.0.2",
+    "neo4j-driver": "^6.0.1",
     "reagraph": "^4.20.0",
     "sharp": "^0.34.5",
     "sql.js": "^1.10.0",
