--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@prisma/client": "^7.3.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "express": "^4.21.0",
@@ -65,6 +65,7 @@
     "gray-matter": "^4.0.3",
     "multer": "^2.0.2",
     "neo4j-driver": "^6.0.1",
+    "prisma": "^7.3.0",
     "reagraph": "^4.20.0",
     "sharp": "^0.34.5",
     "sql.js": "^1.10.0",
@@ -84,6 +85,7 @@
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^1.0.0",
     "concurrently": "^9.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "puppeteer": "^24.35.0",
     "tsx": "^4.0.0",
