feat: add integration test setup with auto server start
- Add globalSetup.ts that starts/stops server for integration tests
- Add vitest.integration.config.ts for integration-specific config
- Add npm scripts: test:unit (excludes integration), test:integration

Unit tests: 77/112 files pass (1705/1878 tests)
Integration tests now self-contained with server lifecycle

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "questions:load:force": "tsx questions/loader.ts --force",
     "test": "vitest",
     "test:run": "vitest run",
+    "test:unit": "vitest run --exclude 'tests/integration/**'",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:obs:api": "vitest run tests/unit/observability/api",
     "test:obs:ui": "vitest run frontend/src/components/observability/__tests__",
