--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.0.0",
     "@types/sql.js": "^1.4.9",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^1.0.0",
@@ -90,6 +91,7 @@
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "puppeteer": "^24.35.0",
+    "supertest": "^7.2.2",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
