--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@mariozechner/pi-ai": "^0.51.6",
     "@prisma/client": "^7.3.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
