feat(e2e): Add Playwright E2E tests for Vibe platform
- Setup Playwright with multi-browser configuration
- Added test scripts to package.json (test:e2e, test:e2e:ui, etc.)
- Created playwright.config.ts with Chrome, Firefox, Safari, mobile configs

Test files:
- e2e/layout.spec.ts - Unified layout, chat panel, responsive behavior
- e2e/ideation-flow.spec.ts - Chat interactions, session management
- e2e/phase-transitions.spec.ts - Phase indicators and transitions
- e2e/build-progress.spec.ts - Build progress view, pause/resume, human intervention

Test helpers:
- e2e/fixtures.ts - Mock data and API route handlers
- e2e/utils.ts - Common test utilities

CI Integration:
- .github/workflows/e2e-tests.yml - Runs on PR, sharded for performance
- PR comment with test results
- Artifact upload for reports, screenshots, traces

Total: 71 tests covering critical user journeys

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ npm-debug.log*
 __pycache__/
 *.pyc
 .venv/
+
+# Playwright
+frontend/test-results/
+frontend/playwright-report/
+frontend/playwright/.cache/
+frontend/e2e/*.spec.ts-snapshots/
