--- a/coding-loops/loop-3-polish/config.json
+++ b/coding-loops/loop-3-polish/config.json
@@ -2,7 +2,7 @@
   "name": "Loop 3: Polish (Monitoring -> E2E -> PWA)",
   "specs_dir": "coding-loops/loop-3-polish/specs",
   "test_state_file": "test-state.json",
-  "model": "claude-opus-4-5-20251101",
+  "model": "claude-opus-4-6",
   "max_attempts": 3,
   "auto_continue_delay": 3,
   "priority": 3,
