feat(harness): Phase 3 Backend API complete
All 7 tasks completed:

✅ 3.1: Express server setup (port 3333, CORS, health check)
✅ 3.2: Agents API (/api/agents - list, get, patch, heartbeat)
✅ 3.3: Tasks API (/api/tasks - CRUD, assign, complete, fail)
✅ 3.4: Sessions API (/api/sessions - CRUD, iterations, terminate)
✅ 3.5: Events API (/api/events - list, get, create)
✅ 3.6: Tests API (/api/tests/suites, /api/tests/runs)
✅ 3.7: Error handling middleware (404, 500, consistent JSON)

API Endpoints:
- GET/PATCH /api/agents/:id
- GET/POST/PATCH/DELETE /api/tasks/:id
- POST /api/tasks/:id/assign|complete|fail
- GET/POST/PATCH /api/sessions/:id
- POST /api/sessions/:id/terminate|iterations
- GET/POST /api/events
- GET /api/tests/suites|runs
- POST /api/tests/runs

Tested: Server starts, health check works, agents endpoint returns 13 agents

--- a/parent-harness/orchestrator/package.json
+++ b/parent-harness/orchestrator/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "dev": "tsx watch src/server.ts",
+    "start": "node dist/server.js",
     "migrate": "tsx src/db/migrate.ts",
     "seed": "tsx src/db/seed.ts",
     "typecheck": "tsc --noEmit"
@@ -17,10 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^11.8.1",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^22.13.4",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.2",
