--- a/parent-harness/orchestrator/package.json
+++ b/parent-harness/orchestrator/package.json
@@ -19,6 +19,7 @@
     "better-sqlite3": "^11.8.1",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "node-telegram-bot-api": "^0.67.0",
     "uuid": "^11.1.0",
     "ws": "^8.19.0"
   },
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^22.13.4",
+    "@types/node-telegram-bot-api": "^0.64.13",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
     "tsx": "^4.19.2",
