--- a/parent-harness/dashboard/package.json
+++ b/parent-harness/dashboard/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:e2e": "vitest run --reporter verbose",
+    "test:e2e": "vitest run tests/e2e/dashboard.test.ts --reporter verbose",
+    "test:e2e:browser": "vitest run tests/e2e/dashboard-browser.test.ts --reporter verbose",
+    "test:e2e:all": "vitest run tests/e2e/*.test.ts --reporter verbose",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
