--- a/parent-harness/orchestrator/package.json
+++ b/parent-harness/orchestrator/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/server.js",
     "migrate": "tsx src/db/migrate.ts",
     "seed": "tsx src/db/seed.ts",
+    "seed-tests": "tsx src/db/seed-tests.ts",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest"
