fix(harness): Support OAuth token for spawner
- Added ANTHROPIC_OAUTH_TOKEN support
- OAuth token works as Bearer token with Anthropic SDK
- No API key required - use OAuth from Claude Console

--- a/parent-harness/orchestrator/package.json
+++ b/parent-harness/orchestrator/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@mariozechner/pi-ai": "^0.52.6",
     "better-sqlite3": "^11.8.1",
     "cors": "^2.8.6",
     "express": "^5.2.1",
